# MultiLander

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pages.yml
docs/: CONTRACT.md  DESIGN.md
docs/superpowers/plans/: 2026-06-07-ai-pilot-cem.md  2026-06-07-policy-import.md
docs/superpowers/specs/: 2026-06-07-ml-pilot-design.md
examples/: README.md  train_template.py
scripts/: build_web.sh  serve.sh
src/moonlander/: __init__.py  config.py  env.py  train_cem.py
src/moonlander/core/: __init__.py  autopilot.py  game.py  physics.py  policy.py  terrain.py
tests/: test_audit_fixes.py  test_autopilot.py  test_env.py  test_game.py  test_multi.py  test_obs.py  test_physics.py  test_policy.py  test_presets.py  test_terrain.py  test_terrain_variety.py  test_train_cem.py  test_train_template.py
web/: app.js  docs.html  effects.js  index.html  ml.html  renderer.js  vectorfont.js
web/assets/: policy-tiny.json  policy.json
