[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "moonlander"
version = "0.2.0"
description = "Classic Atari-style Lunar Lander RL environment with vector-graphics web visualization (Pyodide)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = []  # core is pure stdlib on purpose — it must stay tiny for the browser (Pyodide)

[project.optional-dependencies]
env = ["gymnasium>=1.0", "numpy>=1.24"]
dev = ["gymnasium>=1.0", "numpy>=1.24", "pytest>=8", "build"]

[tool.hatch.build.targets.wheel]
packages = ["src/moonlander"]

[tool.pytest.ini_options]
testpaths = ["tests"]
